qzion (0.4.0-1) UNRELEASED; urgency=low

  * New upstream release.
  * Fix QMAKE variable override in debian/rules. (Closes: #523910)
  * Update homepage.
  * Bump Standards-Version from 3.8.0 to 3.8.1 (no changes needed).

 -- Debian Krap Maintainers <debian-qt-kde@lists.debian.org>  Mon, 04 May 2009 11:01:26 +0200

qzion (0.3.0-2) unstable; urgency=low

  * Upload to unstable

 -- Sune Vuorela <debian@pusling.com>  Mon, 16 Feb 2009 08:57:08 +0100

qzion (0.3.0-1) experimental; urgency=low

  * Initial release.
    - taken from ubuntu, thanks.

  +++ Changes by Sune Vuorela:

  * Postprocess prl file to not let it contain too much crap. Taken from qt4
    package.
  * Fix up lintian issues.

 -- Debian Krap Maintainers <debian-qt-kde@lists.debian.org>  Tue, 16 Dec 2008 21:00:23 +0200