@@ -3,7 +3,7 @@ Section: libs
 Priority: optional
 Maintainer: Debian Krap Maintainers <debian-qt-kde@lists.debian.org>
 Uploaders: Jonathan Riddell <jriddell@ubuntu.com>, Sune Vuorela <debian@pusling.com>, George Kiagiadakis <gkiagiad@csd.uoc.gr>
-Build-Depends: cdbs, debhelper (>= 5), libqt4-dev
+Build-Depends: cdbs, debhelper (>= 7), libqt4-dev, cmake
 Standards-Version: 3.8.1
 Homepage: http://code.openbossa.org/projects/qzion
 
