@@ -1,4 +1,3 @@
 usr/include/*
 usr/lib/lib*.so
 usr/lib/pkgconfig/*
-usr/lib/libqzion.prl
