@@ -1,24 +1,11 @@
 #!/usr/bin/make -f
 
 include /usr/share/cdbs/1/rules/debhelper.mk
-include /usr/share/cdbs/1/class/qmake.mk
+include /usr/share/cdbs/1/class/cmake.mk
 
-QMAKE := qmake-qt4
-DEB_QMAKE_ARGS += PREFIX=/usr
-DEB_DH_INSTALL_SOURCEDIR := debian/tmp
-
-clean::
-	rm -rf debian/tmp
-	rm -f src/qpainter/libqzion.prl
-	rm -rf src/qpainter/pkgconfig
+DEB_CMAKE_EXTRA_FLAGS := -DSKIP_PYTHON_BINDINGS=1
 
 common-install-arch::
 # Fix wrong path in pkgconfig files
 	find $(DEB_DESTDIR)/usr/lib/pkgconfig -type f -name '*.pc' \
 		-exec perl -pi -e "s, -L$(CURDIR)/?\S+,,g" {} \;
-# Fix wrong path in prl files
-	find $(DEB_DESTDIR)/usr/lib -type f -name '*.prl' \
-		-exec perl -pi -e "s, -L$(CURDIR)/\S+,,g" {} \;
-	find $(DEB_DESTDIR)/usr/lib -type f -name '*.prl' \
-		-exec sed -i -e "/^QMAKE_PRL_BUILD_DIR/d;s/\(QMAKE_PRL_LIBS =\).*/\1/" {} \;
-
